# hermitshell

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SPEC.md  deny.toml  flake.nix  install.sh
.github/: dependabot.yml
.github/workflows/: apt-repo.yml  audit.yml  ci.yml  release.yml
debian/: hermitshell.default  postinst  postrm  prerm
deploy/: hermitshell.sysusers.conf
docker/s6/hermitshell-agent/: run
docker/s6/hermitshell-ui/: run
docs/: COMPARISON.md  HARDWARE.md  INSTALL.md  ROADMAP.md  SECURITY.md  THREAT-MODEL.md  TROUBLESHOOTING.md  eap720-api.md  owasp-audit-findings.md  owasp-proactive-audit-prompt.md  yagni-audit-findings.md  yagni-evaluation-prompt.md
docs/.well-known/: security.txt
docs/book/: book.toml
docs/book/src/: SUMMARY.md  intro.md
docs/book/src/cli/: configuration.md  hermitctl.md
docs/book/src/getting-started/: hardware.md  installation.md  setup-wizard.md
docs/book/src/reference/: comparison.md  contributing.md  security.md  threat-model.md  troubleshooting.md
docs/book/src/web-ui/: alerts.md  dashboard.md  devices.md  dns.md  logs.md  port-forwarding.md  settings.md  traffic.md  wifi.md  wireguard.md
docs/plans/: 2026-03-02-l2-anti-spoofing-design.md  2026-03-02-l2-anti-spoofing-plan.md  2026-03-02-snmp-switch-implementation.md  2026-03-02-snmp-switch-redesign.md  2026-03-02-snmpv3-design.md  2026-03-02-snmpv3-implementation.md  2026-03-02-wire-dead-code-design.md  2026-03-02-wire-dead-code-plan.md  2026-03-03-ui-redesign-design.md  2026-03-03-ui-redesign-plan.md
hermitctl/: Cargo.toml
hermitctl/src/: main.rs
hermitshell/: Cargo.toml  Dockerfile
hermitshell-agent/: Cargo.toml  hermitshell-agent.service
hermitshell-agent/src/: analyzer.rs  blocky.rs  conntrack.rs  crypto.rs  db.rs  dhcp.rs  dns_log.rs  log_export.rs  main.rs  mdns.rs  natpmp.rs  nftables.rs  paths.rs  pd.rs  portmap.rs  qos.rs  ra.rs  rest_api.rs  runzero.rs  socket.rs  subnet.rs  tls.rs  tls_client.rs  unbound.rs  update.rs  upnp.rs  vlan.rs  wan.rs  wireguard.rs
hermitshell-agent/src/socket/: auth.rs  common_passwords.rs  config.rs  devices.rs  dns.rs  guest.rs  logs.rs  mod.rs  network.rs  setup.rs  switch.rs  totp.rs  vlan.rs  wifi.rs  wireguard.rs
hermitshell-agent/src/switch/: mod.rs  ssh.rs  vendor.rs
hermitshell-agent/src/wifi/: eap_standalone.rs  mod.rs  unifi.rs
hermitshell-common/: Cargo.toml
hermitshell-common/src/: config_validate.rs  lib.rs  subnet.rs
hermitshell-dhcp/: Cargo.toml
hermitshell-dhcp/src/: main.rs
hermitshell-ui/: Cargo.toml
hermitshell-ui/src/: charts.rs  client.rs  lib.rs  server_fns.rs  types.rs
hermitshell-ui/src/components/: layout.rs  mod.rs  settings_nav.rs  stat_card.rs  toast.rs
hermitshell-ui/src/pages/: alerts.rs  audit.rs  dashboard.rs  device_detail.rs  devices.rs  dns.rs  groups.rs  guest.rs  login.rs  logs.rs  mod.rs  port_forwarding.rs  settings.rs  settings_monitoring.rs  settings_network.rs  settings_system.rs  setup.rs  switch_settings.rs  traffic.rs  vlan_settings.rs  wifi.rs  wireguard.rs
hermitshell-ui/static/: app.js
hermitshell-ui/style/: style.css
hermitshell/src/: client.rs  main.rs
nix/: module.nix
scripts/: build-agent.sh  build-container.sh  build-docker-local.sh  rollback.sh
systemd/: hermitshell-agent-deb.service  hermitshell-agent.service  hermitshell-ui-native.service  hermitshell-ui.service
tests/: Vagrantfile  run.sh  snapshots.sh  sweep.sh
tests/cases/: 01-wan-connectivity.sh  02-lan-dhcp.sh  03-lan-internet.sh  04-agent-socket.sh  05-device-discovery.sh  06-bandwidth-tracking.sh  07-web-ui.sh  08-device-quarantine.sh  09-device-approval.sh  10-subnet-assignment.sh  11-device-block.sh  12-ad-blocking.sh  13-dns-redirect.sh  14-agent-restart.sh  15-device-groups.sh  16-wireguard-setup.sh  17-wireguard-peer-traffic.sh  18-hostname-capture.sh  19-port-forwarding.sh  20-dhcp-reservation.sh  21-auth-https.sh  22-backup-restore.sh  23-connection-logging.sh  24-dns-query-logging.sh  25-log-export-config.sh  26-config-key-protection.sh  27-runzero-config.sh  28-behavioral-analysis.sh  29-qos.sh  30-login-rate-limiting.sh  31-session-ttl.sh  32-csrf-protection.sh  33-dhcp-hardening.sh  34-deploy-docker.sh  35-deploy-install.sh  36-tls-management.sh  37-wifi-management.sh  38-setup-wizard.sh  39-update-check.sh  40-bandwidth-dashboard.sh  (+24 more)
tests/lib/: deploy.sh  helpers.sh  rfc3442-classless-routes
tests/provision/: lan.sh  router-nixos-agent.sh  router-nixos.sh  router.sh  wan.sh
