[workspace]
resolver = "2"
members = ["hermitshell", "hermitshell-agent", "hermitshell-common", "hermitshell-dhcp", "hermitshell-ui", "hermitctl"]

[workspace.dependencies]
hermitshell-common = { path = "hermitshell-common" }
anyhow = "1"
axum = "0.8"
dhcproto = "0.14"
leptos = { version = "0.8", features = ["ssr", "nonce"] }
leptos_axum = "0.8"
leptos_router = { version = "0.8", features = ["ssr"] }
lru = "0.16"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.6", features = ["all"] }
toml = "0.9"
snmp2 = { version = "0.5", features = ["v3"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "forbid"
