[package]
name = "hermitctl"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hermitshell-common = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
