[package]
name = "hermitshell-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
hermitshell-common = { path = "../hermitshell-common" }
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
hkdf = "0.12"
rcgen = "0.13"
rustls-pemfile = "2"
x509-parser = "0.16"
instant-acme = "0.8"
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }
urlencoding = "2"
nix = { version = "0.29", features = ["fs", "hostname", "user"] }

[lints]
workspace = true
