[package]
name = "hermitshell-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hermitshell-common = { path = "../hermitshell-common" }
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
flate2 = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.5", features = ["all"] }
tar = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
hkdf = "0.12"
rcgen = "0.13"
rustls-pemfile = "2"
x509-parser = "0.16"
instant-acme = "0.8"
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "native-tls-vendored", "json", "cookies"] }
native-tls = { version = "0.2", features = ["vendored"] }
tokio-native-tls = "0.3"
rustls = "0.23"
webpki-roots = "0.26"
rustls-pki-types = "1"
urlencoding = "2"
nix = { version = "0.29", features = ["fs", "hostname", "signal", "user"] }
tempfile = "3"
zeroize = "1"
simple-dns = "0.9"
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
dhcproto = "0.12"

[package.metadata.deb]
name = "hermitshell"
maintainer = "HermitShell <hello@hermitshell.dev>"
copyright = "2025-2026, HermitShell contributors"
license-file = ["../LICENSE", "0"]
depends = "nftables, conntrack, wireguard-tools, iproute2, unbound"
section = "net"
priority = "optional"
extended-description = "Open-source router platform. No cloud, no controller, runs on commodity hardware."
assets = [
    ["target/release/hermitshell-agent", "/opt/hermitshell/hermitshell-agent", "755"],
    ["target/release/hermitshell-dhcp", "/opt/hermitshell/hermitshell-dhcp", "755"],
    ["target/release/hermitshell", "/opt/hermitshell/hermitshell", "755"],
    ["../systemd/hermitshell-agent-deb.service", "/lib/systemd/system/hermitshell-agent.service", "644"],
    ["../systemd/hermitshell-ui-native.service", "/lib/systemd/system/hermitshell-ui.service", "644"],
    ["../debian/hermitshell.default", "/etc/default/hermitshell", "644"],
]
conf-files = ["/etc/default/hermitshell"]
maintainer-scripts = "../debian/"

[lints]
workspace = true
