[package]
name = "hermitshell-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hermitshell-common = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
dhcproto = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
async-trait = "0.1"
snmp2 = { workspace = true }
base64 = "0.22"
flate2 = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "signal", "sync", "time", "io-util"] }
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
rcgen = "0.14"
x509-parser = "0.18"
instant-acme = { version = "0.8", default-features = false, features = ["ring", "hyper-rustls"] }
md-5 = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "native-tls-vendored", "json", "cookies"] }
native-tls = { version = "0.2", features = ["vendored"] }
tokio-native-tls = "0.3"
rustls-pki-types = "1"
urlencoding = "2"
nix = { version = "0.31", features = ["fs", "hostname", "signal", "user"] }
tempfile = "3"
sha1 = "0.10"
data-encoding = "2"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
zeroize = "1"
regex = "1"
simple-dns = "0.11"
uuid = { version = "1", features = ["v4"] }

[package.metadata.deb]
name = "hermitshell"
maintainer = "HermitShell <hello@hermitshell.org>"
copyright = "2025-2026, HermitShell contributors"
license-file = ["../LICENSE", "0"]
depends = "nftables, conntrack, wireguard-tools, iproute2, unbound"
section = "net"
priority = "optional"
extended-description = "Open-source router platform. No cloud, no controller, runs on commodity hardware."
assets = [
    ["target/release/hermitshell-agent", "/opt/hermitshell/hermitshell-agent", "755"],
    ["target/release/hermitshell-dhcp", "/opt/hermitshell/hermitshell-dhcp", "755"],
    ["target/release/hermitshell", "/opt/hermitshell/hermitshell", "755"],
    ["../systemd/hermitshell-agent-deb.service", "/lib/systemd/system/hermitshell-agent.service", "644"],
    ["../systemd/hermitshell-ui-native.service", "/lib/systemd/system/hermitshell-ui.service", "644"],
    ["../debian/hermitshell.default", "/etc/default/hermitshell", "644"],
]
conf-files = ["/etc/default/hermitshell"]
maintainer-scripts = "../debian/"

[lints]
workspace = true
