[package]
name = "hermitshell-dhcp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
hermitshell-common = { path = "../hermitshell-common" }
dhcproto = "0.14"
ipnet = "2"
lru = "0.16"
socket2 = { version = "0.6", features = ["all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
