[package]
name = "hermitshell-dhcp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hermitshell-common = { workspace = true }
anyhow = { workspace = true }
dhcproto = { workspace = true }
ipnet = "2"
lru = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
