[package]
name = "hermitshell-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = "0.8"
leptos_router = { version = "0.8", features = ["ssr"] }
axum = "0.8"
server_fn = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
