[package]
name = "hermitshell-ui"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hermitshell-common = { workspace = true }
axum = { workspace = true }
leptos = { workspace = true }
leptos_axum = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
server_fn = "0.8"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

[lints]
workspace = true
