[package]
name = "hermitshell"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = "0.8"
leptos_router = { version = "0.8", features = ["ssr"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hermitshell-ui = { path = "../hermitshell-ui" }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
hyper = "1"

[lints]
workspace = true

[package.metadata.leptos]
output-name = "hermitshell"
site-addr = "0.0.0.0:3000"
