[package]
name = "hermitshell"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hermitshell-ui = { path = "../hermitshell-ui" }
axum = { workspace = true }
leptos = { workspace = true }
leptos_axum = { workspace = true }
leptos_router = { workspace = true }
lru = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
tower-service = "0.3"
serde_urlencoded = "0.7"

[lints]
workspace = true

[package.metadata.leptos]
output-name = "hermitshell"
site-addr = "0.0.0.0:3000"
